@@ -1,43 +1,44 @@
 package com.chtrembl.petstore.pet.service;
 
-import com.chtrembl.petstore.pet.model.DataPreload;
 import com.chtrembl.petstore.pet.model.Pet;
+import com.chtrembl.petstore.pet.repository.PetRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class PetService {
 
-    private final DataPreload dataPreload;
+    private final PetRepository petRepository;
 
     public List<Pet> findPetsByStatus(List<String> status) {
         log.info("Finding pets with status: {}", status);
 
-        return dataPreload.getPets().stream()
-                .filter(pet -> status.contains(pet.getStatus().getValue()))
-                .toList();
+        return petRepository.findPetsByStatusIsIn(
+                status.stream()
+                        .map(Pet.StatusEnum::valueOf)
+                        .collect(Collectors.toList())
+        );
     }
 
     public Optional<Pet> findPetById(Long petId) {
         log.info("Finding pet with id: {}", petId);
 
-        return dataPreload.getPets().stream()
-                .filter(pet -> pet.getId().equals(petId))
-                .findFirst();
+        return petRepository.findPetByIdIs(petId);
     }
 
     public List<Pet> getAllPets() {
         log.info("Getting all pets");
-        return dataPreload.getPets();
+        return petRepository.findAll();
     }
 
-    public int getPetCount() {
-        return dataPreload.getPets().size();
+    public Long getPetCount() {
+        return petRepository.count();
     }
 }
